subiendo react router

--- a/src/components/EmergencyContacts/EmergencyContacts.scss
+++ b/src/components/EmergencyContacts/EmergencyContacts.scss
@@ -109,6 +109,7 @@ header {
             }
         }
         .BtnPersonalInfo {
+            display: none;
             width: 155px;
             background-color: #FF4081;
             color: white;
