--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -31,7 +31,7 @@ header {
     .Enlaces {
         display: inline-block;
         text-align: right;
-        a {
+        .a {
             color: white;
             margin-right: 5%;
             text-decoration: none;
