--- a/src/components/Newpassword/Newpassword.scss
+++ b/src/components/Newpassword/Newpassword.scss
@@ -1,282 +1,282 @@
-.MainContainer {
-    display: flex;
-    justify-content: center;
-    .ContainerLogin {
-        width: 70%;
-        height: 88vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: 1px solid darkgray;
-        border-radius: 2%;
-        margin-top: 2%;
-        -webkit-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
-        -moz-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
-        box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
-        .LoginMain{
-            width: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100%;
-            border: none;
-            // border-right: 1px solid;
-            background-color: #6A1B9A;
-            .LoginTitle {
-                font-family: 'Tangerine';
-                font-weight: 100;
-                font-size: 75px;
-                color: white;
-                margin-top: 0%;
-                margin-bottom: 2%;
-            }
-            .LoginSubtitle {
-                font-family: 'Roboto';
-                font-weight: 40;
-                color: white;
-                font-size: 20px;
-            }
-            .LoginParagraph {
-                font-weight: 30;
-                text-align: center;
-                font-size: 15px;
-                color: white;
-            }
-        }
-        .col-sm-6 {
-            width: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100%;
-            border-right: 1px solid;
-            border-right: none;
-            .WelcomeTitle {
-                font-family: 'Roboto';
-                font-weight: 50;
-                color: #B3B0B0;
-                margin-top: 0;
-            }
-            .WelcomeSubtitle {
-                font-weight: 40;
-                color: #B3B0B0;
-                margin-top: 0;
-            }
-            .UserLabel {
-                font-family: 'Roboto';
-                font-weight: 32;
-                color: #B3B0B0;
-            }
-            .InputLogin {
-                border: none;
-                border-bottom: 1px solid #673AB7;
-                border-radius: 3px;
-                width: 70%;
-                margin-bottom: 6%;
-            }
-            .LinkPassword {
-                font-family: 'Roboto';
-                font-weight: 25;
-                color: #B3B0B0;
-                text-decoration: none;
-                margin-bottom: 5%;
-            }
-            .LinkRegister {
-                font-family: 'Roboto';
-                font-weight: 25;
-                color: #B3B0B0;
-                text-decoration: none;
-                margin-bottom: 5%;
-            }
-            .BtnLogin {
-                background-color: #FF4081;
-                width: 28%;
-                height: 6%;
-                font-size: 21px;
-                border-radius: 7px;
-                color: white;
-                font-family: Roboto;
-            }
-        }
-    }
-}
+// .MainContainer {
+//     display: flex;
+//     justify-content: center;
+//     .ContainerLogin {
+//         width: 70%;
+//         height: 88vh;
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//         border: 1px solid darkgray;
+//         border-radius: 2%;
+//         margin-top: 2%;
+//         -webkit-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+//         -moz-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+//         box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+//         .LoginMain{
+//             width: 50%;
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+//             flex-direction: column;
+//             height: 100%;
+//             border: none;
+//             // border-right: 1px solid;
+//             background-color: #6A1B9A;
+//             .LoginTitle {
+//                 font-family: 'Tangerine';
+//                 font-weight: 100;
+//                 font-size: 75px;
+//                 color: white;
+//                 margin-top: 0%;
+//                 margin-bottom: 2%;
+//             }
+//             .LoginSubtitle {
+//                 font-family: 'Roboto';
+//                 font-weight: 40;
+//                 color: white;
+//                 font-size: 20px;
+//             }
+//             .LoginParagraph {
+//                 font-weight: 30;
+//                 text-align: center;
+//                 font-size: 15px;
+//                 color: white;
+//             }
+//         }
+//         .col-sm-6 {
+//             width: 50%;
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+//             flex-direction: column;
+//             height: 100%;
+//             border-right: 1px solid;
+//             border-right: none;
+//             .WelcomeTitle {
+//                 font-family: 'Roboto';
+//                 font-weight: 50;
+//                 color: #B3B0B0;
+//                 margin-top: 0;
+//             }
+//             .WelcomeSubtitle {
+//                 font-weight: 40;
+//                 color: #B3B0B0;
+//                 margin-top: 0;
+//             }
+//             .UserLabel {
+//                 font-family: 'Roboto';
+//                 font-weight: 32;
+//                 color: #B3B0B0;
+//             }
+//             .InputLogin {
+//                 border: none;
+//                 border-bottom: 1px solid #673AB7;
+//                 border-radius: 3px;
+//                 width: 70%;
+//                 margin-bottom: 6%;
+//             }
+//             .LinkPassword {
+//                 font-family: 'Roboto';
+//                 font-weight: 25;
+//                 color: #B3B0B0;
+//                 text-decoration: none;
+//                 margin-bottom: 5%;
+//             }
+//             .LinkRegister {
+//                 font-family: 'Roboto';
+//                 font-weight: 25;
+//                 color: #B3B0B0;
+//                 text-decoration: none;
+//                 margin-bottom: 5%;
+//             }
+//             .BtnLogin {
+//                 background-color: #FF4081;
+//                 width: 28%;
+//                 height: 6%;
+//                 font-size: 21px;
+//                 border-radius: 7px;
+//                 color: white;
+//                 font-family: Roboto;
+//             }
+//         }
+//     }
+// }
 
-@media(max-width:576px) {
-    .MainContainer {
-        .ContainerLogin {
-            margin-top: 5%;
-            height: 94vh;
-            flex-direction: column;
-            .LoginMain{
-                width: 100%;
-                height: 25%;
-                text-align: center;
-                .LoginTitle {
-                    font-size: 58px;
-                }
-                .LoginSubtitle {
-                    display: none;
-                }
-                .LoginParagraph {
-                    display: none;
-                }
-            }
-            .col-sm-6 {
-                width: 100%;
-                height: 75%;
-                text-align: center;
-                .WelcomeTitle {
-                    font-size: 24px;
-                }
-                .WelcomeSubtitle {
-                    font-size: 16px;
-                }
-                .UserLabel {
-                    font-size: 16px;
-                }
-                .LinkPassword {
-                    font-size: 14px;
-                }
-                .LinkRegister {
-                    font-size: 14px;
-                }
-                .BtnLogin {
-                    width: 40%;
-                    height: 11%;
-                    font-size: 21px;
-                    margin-top: 4%;
-                }
-            }
-        }
-    }
-}
+// @media(max-width:576px) {
+//     .MainContainer {
+//         .ContainerLogin {
+//             margin-top: 5%;
+//             height: 94vh;
+//             flex-direction: column;
+//             .LoginMain{
+//                 width: 100%;
+//                 height: 25%;
+//                 text-align: center;
+//                 .LoginTitle {
+//                     font-size: 58px;
+//                 }
+//                 .LoginSubtitle {
+//                     display: none;
+//                 }
+//                 .LoginParagraph {
+//                     display: none;
+//                 }
+//             }
+//             .col-sm-6 {
+//                 width: 100%;
+//                 height: 75%;
+//                 text-align: center;
+//                 .WelcomeTitle {
+//                     font-size: 24px;
+//                 }
+//                 .WelcomeSubtitle {
+//                     font-size: 16px;
+//                 }
+//                 .UserLabel {
+//                     font-size: 16px;
+//                 }
+//                 .LinkPassword {
+//                     font-size: 14px;
+//                 }
+//                 .LinkRegister {
+//                     font-size: 14px;
+//                 }
+//                 .BtnLogin {
+//                     width: 40%;
+//                     height: 11%;
+//                     font-size: 21px;
+//                     margin-top: 4%;
+//                 }
+//             }
+//         }
+//     }
+// }
 
-@media(min-width:768px) {
-    .MainContainer {
-        .ContainerLogin {
-            width: 76%;
-            height: 70vh;
-            margin-top: 14%;
-            .col-sm-6 {
-                text-align: center;
-                .BtnLogin {
-                    width: 40%;
-                    height: 8%;
-                    font-size: 24px;
-                    margin-top: 4%;
-                }
-            }
-        }
-    }
-}
+// @media(min-width:768px) {
+//     .MainContainer {
+//         .ContainerLogin {
+//             width: 76%;
+//             height: 70vh;
+//             margin-top: 14%;
+//             .col-sm-6 {
+//                 text-align: center;
+//                 .BtnLogin {
+//                     width: 40%;
+//                     height: 8%;
+//                     font-size: 24px;
+//                     margin-top: 4%;
+//                 }
+//             }
+//         }
+//     }
+// }
 
-@media(min-width:1200px) {
-    .MainContainer {
-        display: flex;
-        justify-content: center;
-        .ContainerLogin {
-            width: 70%;
-            height: 88vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border: 1px solid darkgray;
-            border-radius: 2%;
-            margin-top: 2%;
-            -webkit-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
-            -moz-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
-            box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
-            .LoginMain{
-                width: 50%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                height: 100%;
-                border: none;
-                background-color: #6A1B9A;
-                .LoginTitle {
-                    font-family: 'Tangerine';
-                    font-weight: 100;
-                    font-size: 75px;
-                    color: white;
-                    margin-top: 0%;
-                    margin-bottom: 2%;
-                }
-                .LoginSubtitle {
-                    font-family: 'Roboto';
-                    font-weight: 40;
-                    color: white;
-                    font-size: 20px;
-                }
-                .LoginParagraph {
-                    font-weight: 30;
-                    text-align: center;
-                    font-size: 15px;
-                    color: white;
-                }
-            }
-            .col-sm-6 {
-                width: 50%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-                flex-direction: column;
-                height: 100%;
-                border-right: 1px solid;
-                border-right: none;
-                .WelcomeTitle {
-                    font-family: 'Roboto';
-                    font-weight: 50;
-                    color: #B3B0B0;
-                    margin-top: 0;
-                }
-                .WelcomeSubtitle {
-                    font-weight: 40;
-                    color: #B3B0B0;
-                    margin-top: 0;
-                }
-                .UserLabel {
-                    font-family: 'Roboto';
-                    font-weight: 32;
-                    color: #B3B0B0;
-                }
-                .InputLogin {
-                    border: none;
-                    border-bottom: 1px solid #673AB7;
-                    border-radius: 3px;
-                    width: 70%;
-                    margin-bottom: 6%;
-                }
-                .LinkPassword {
-                    font-family: 'Roboto';
-                    font-weight: 25;
-                    color: #B3B0B0;
-                    text-decoration: none;
-                    margin-bottom: 5%;
-                }
-                .LinkRegister {
-                    font-family: 'Roboto';
-                    font-weight: 25;
-                    color: #B3B0B0;
-                    text-decoration: none;
-                    margin-bottom: 5%;
-                }
-                .BtnLogin {
-                    background-color: #FF4081;
-                    width: 45%;
-                    height: 8%;
-                    font-size: 24px;
-                    margin-top: 4%;
-                    border-radius: 7px;
-                    color: white;
-                    font-family: Roboto;
-                }
-            }
-        }
-    }
-}
+// @media(min-width:1200px) {
+//     .MainContainer {
+//         display: flex;
+//         justify-content: center;
+//         .ContainerLogin {
+//             width: 70%;
+//             height: 88vh;
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+//             border: 1px solid darkgray;
+//             border-radius: 2%;
+//             margin-top: 2%;
+//             -webkit-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+//             -moz-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+//             box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+//             .LoginMain{
+//                 width: 50%;
+//                 display: flex;
+//                 justify-content: center;
+//                 align-items: center;
+//                 flex-direction: column;
+//                 height: 100%;
+//                 border: none;
+//                 background-color: #6A1B9A;
+//                 .LoginTitle {
+//                     font-family: 'Tangerine';
+//                     font-weight: 100;
+//                     font-size: 75px;
+//                     color: white;
+//                     margin-top: 0%;
+//                     margin-bottom: 2%;
+//                 }
+//                 .LoginSubtitle {
+//                     font-family: 'Roboto';
+//                     font-weight: 40;
+//                     color: white;
+//                     font-size: 20px;
+//                 }
+//                 .LoginParagraph {
+//                     font-weight: 30;
+//                     text-align: center;
+//                     font-size: 15px;
+//                     color: white;
+//                 }
+//             }
+//             .col-sm-6 {
+//                 width: 50%;
+//                 display: flex;
+//                 justify-content: center;
+//                 align-items: center;
+//                 text-align: center;
+//                 flex-direction: column;
+//                 height: 100%;
+//                 border-right: 1px solid;
+//                 border-right: none;
+//                 .WelcomeTitle {
+//                     font-family: 'Roboto';
+//                     font-weight: 50;
+//                     color: #B3B0B0;
+//                     margin-top: 0;
+//                 }
+//                 .WelcomeSubtitle {
+//                     font-weight: 40;
+//                     color: #B3B0B0;
+//                     margin-top: 0;
+//                 }
+//                 .UserLabel {
+//                     font-family: 'Roboto';
+//                     font-weight: 32;
+//                     color: #B3B0B0;
+//                 }
+//                 .InputLogin {
+//                     border: none;
+//                     border-bottom: 1px solid #673AB7;
+//                     border-radius: 3px;
+//                     width: 70%;
+//                     margin-bottom: 6%;
+//                 }
+//                 .LinkPassword {
+//                     font-family: 'Roboto';
+//                     font-weight: 25;
+//                     color: #B3B0B0;
+//                     text-decoration: none;
+//                     margin-bottom: 5%;
+//                 }
+//                 .LinkRegister {
+//                     font-family: 'Roboto';
+//                     font-weight: 25;
+//                     color: #B3B0B0;
+//                     text-decoration: none;
+//                     margin-bottom: 5%;
+//                 }
+//                 .BtnLogin {
+//                     background-color: #FF4081;
+//                     width: 45%;
+//                     height: 8%;
+//                     font-size: 24px;
+//                     margin-top: 4%;
+//                     border-radius: 7px;
+//                     color: white;
+//                     font-family: Roboto;
+//                 }
+//             }
+//         }
+//     }
+// }
 
