--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -1,19 +1,21 @@
-.MainContainer {
+.MainContainerRegister {
     display: flex;
     justify-content: center;
-    .ContainerLogin {
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    .ContainerRegister {
         width: 70%;
-        height: 88vh;
+        height: 60vh;
         display: flex;
         justify-content: center;
         align-items: center;
         border: 1px solid darkgray;
         border-radius: 2%;
-        margin-top: 2%;
         -webkit-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
         -moz-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
         box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
-        .LoginMain{
+        .RegisterMain{
             width: 50%;
             display: flex;
             justify-content: center;
@@ -23,7 +25,7 @@
             border: none;
             // border-right: 1px solid;
             background-color: #6A1B9A;
-            .LoginTitle {
+            .RegisterTitle {
                 font-family: 'Tangerine';
                 font-weight: 100;
                 font-size: 75px;
@@ -31,17 +33,18 @@
                 margin-top: 0%;
                 margin-bottom: 2%;
             }
-            .LoginSubtitle {
+            .RegisterSubtitle {
                 font-family: 'Roboto';
                 font-weight: 40;
                 color: white;
                 font-size: 20px;
             }
-            .LoginParagraph {
+            .RegisterParagraph {
                 font-weight: 30;
                 text-align: center;
                 font-size: 15px;
                 color: white;
+                padding: 20px;
             }
         }
         .col-sm-6 {
@@ -64,17 +67,25 @@
                 color: #B3B0B0;
                 margin-top: 0;
             }
-            .UserLabel {
-                font-family: 'Roboto';
-                font-weight: 32;
-                color: #B3B0B0;
-            }
-            .InputLogin {
-                border: none;
-                border-bottom: 1px solid #673AB7;
-                border-radius: 3px;
-                width: 70%;
-                margin-bottom: 6%;
+            .InputContainer{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                .UserLabel {
+                    font-family: 'Roboto';
+                    font-weight: 32;
+                    color: #B3B0B0;
+                    width: 70%;
+                }
+                .InputRegister {
+                    border: none;
+                    border-bottom: 1px solid #673AB7;
+                    border-radius: 3px;
+                    width: 70%;
+                    margin-bottom: 6%;
+                }
             }
             .LinkPassword {
                 font-family: 'Roboto';
@@ -90,10 +101,10 @@
                 text-decoration: none;
                 margin-bottom: 5%;
             }
-            .BtnLogin {
+            .BtnRegister {
                 background-color: #FF4081;
-                width: 28%;
-                height: 6%;
+                width: 100px;
+                height: 40px;
                 font-size: 21px;
                 border-radius: 7px;
                 color: white;
@@ -104,22 +115,21 @@
 }
 
 @media(max-width:576px) {
-    .MainContainer {
-        .ContainerLogin {
-            margin-top: 5%;
-            height: 94vh;
+    .MainContainerRegister {
+        .ContainerRegister {
+            height: 85vh;
             flex-direction: column;
-            .LoginMain{
+            .RegisterMain{
                 width: 100%;
                 height: 25%;
                 text-align: center;
-                .LoginTitle {
+                .RegisterTitle {
                     font-size: 58px;
                 }
-                .LoginSubtitle {
+                .RegisterSubtitle {
                     display: none;
                 }
-                .LoginParagraph {
+                .RegisterParagraph {
                     display: none;
                 }
             }
@@ -132,8 +142,10 @@
                 .WelcomeSubtitle {
                     font-size: 18px;
                 }
-                .UserLabel {
-                    font-size: 16px;
+                .InputContainer{
+                    .UserLabel {
+                        font-size: 16px;
+                    }
                 }
                 .LinkPassword {
                     font-size: 14px;
@@ -141,7 +153,7 @@
                 .LinkRegister {
                     font-size: 14px;
                 }
-                .BtnLogin {
+                .BtnRegister {
                     width: 35%;
                     height: 10%;
                     font-size: 20px;
@@ -152,20 +164,21 @@
 }
 
 @media(min-width:768px) {
-    .MainContainer {
-        .ContainerLogin {
+    .MainContainerRegister {
+        .ContainerRegister {
             width: 76%;
             height: 70vh;
-            margin-top: 14%;
         }
     }
 }
 
 @media(min-width:1200px) {
-    .MainContainer {
+    .MainContainerRegister {
         display: flex;
         justify-content: center;
-        .ContainerLogin {
+        align-items: center;
+        height: 100vh;
+        .ContainerRegister {
             width: 70%;
             height: 88vh;
             display: flex;
@@ -173,11 +186,10 @@
             align-items: center;
             border: 1px solid darkgray;
             border-radius: 2%;
-            margin-top: 2%;
             -webkit-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
             -moz-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
             box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
-            .LoginMain{
+            .RegisterMain{
                 width: 50%;
                 display: flex;
                 justify-content: center;
@@ -186,7 +198,7 @@
                 height: 100%;
                 border: none;
                 background-color: #6A1B9A;
-                .LoginTitle {
+                .RegisterTitle {
                     font-family: 'Tangerine';
                     font-weight: 100;
                     font-size: 75px;
@@ -194,13 +206,13 @@
                     margin-top: 0%;
                     margin-bottom: 2%;
                 }
-                .LoginSubtitle {
+                .RegisterSubtitle {
                     font-family: 'Roboto';
                     font-weight: 40;
                     color: white;
                     font-size: 20px;
                 }
-                .LoginParagraph {
+                .RegisterParagraph {
                     font-weight: 30;
                     text-align: center;
                     font-size: 15px;
@@ -227,17 +239,19 @@
                     color: #B3B0B0;
                     margin-top: 0;
                 }
-                .UserLabel {
-                    font-family: 'Roboto';
-                    font-weight: 32;
-                    color: #B3B0B0;
-                }
-                .InputLogin {
-                    border: none;
-                    border-bottom: 1px solid #673AB7;
-                    border-radius: 3px;
-                    width: 70%;
-                    margin-bottom: 6%;
+                .InputContainer{
+                    .UserLabel {
+                        font-family: 'Roboto';
+                        font-weight: 32;
+                        color: #B3B0B0;
+                    }
+                    .InputRegister {
+                        border: none;
+                        border-bottom: 1px solid #673AB7;
+                        border-radius: 3px;
+                        width: 70%;
+                        margin-bottom: 6%;
+                    }
                 }
                 .LinkPassword {
                     font-family: 'Roboto';
@@ -253,7 +267,7 @@
                     text-decoration: none;
                     margin-bottom: 5%;
                 }
-                .BtnLogin {
+                .BtnRegister {
                     background-color: #FF4081;
                     width: 28%;
                     height: 6%;
