Modificacion de las vistas de login y registrarse

--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -135,7 +135,8 @@
             }
             .col-sm-6 {
                 width: 100%;
-                height: 75%;
+                height: 100%;
+                padding-bottom: 20px;
                 .WelcomeTitle {
                     font-size: 26px;
                 }
