--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -136,6 +136,7 @@
             .col-sm-6 {
                 width: 100%;
                 height: 75%;
+                padding-bottom: 20px;
                 .WelcomeTitle {
                     font-size: 26px;
                 }
