--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,7 @@
 header {
     display: flex;
     background-color: #6A1B9A;
-    width: 100%;
+    width: 100vw;
     top: 0;
     justify-content: space-evenly;
     -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
@@ -21,7 +21,7 @@ header {
         margin-right: 1em;
         color: white;
         h1 {
-            font-family: 'Tangerine';
+            font-family: 'Tangerine', cursive;
             font-size: 60px;
             color: white;
             text-decoration: none;
