--- a/src/components/MedicalRecord/Medicalrecord.scss
+++ b/src/components/MedicalRecord/Medicalrecord.scss
@@ -1,184 +1,184 @@
-header {
-    display: flex;
-    background-color: #6A1B9A;
-    width: 100%;
-    top: 0;
-    justify-content: space-evenly;
-    -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    .Menu {
-        width: 90%;
-        max-width: 1000px;
-        margin: auto;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .Logo {
-        display: inline-block;
-        margin-right: 1em;
-        color: white;
-        h1 {
-            font-family: 'Tangerine';
-            font-size: 55px;
-        }
-        .Btn-menu {
-            display: none;
-        }
-    }
-    .Enlaces {
-        display: inline-block;
-        text-align: right;
-        a {
-            color: white;
-            margin-right: 5%;
-            text-decoration: none;
-        }
-        a:hover {
-            background: #f2f2f2;
-            color: #4357ad;
-        }
-    }
-}
+// header {
+//     display: flex;
+//     background-color: #6A1B9A;
+//     width: 100%;
+//     top: 0;
+//     justify-content: space-evenly;
+//     -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
+//     -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
+//     box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
+//     .Menu {
+//         width: 90%;
+//         max-width: 1000px;
+//         margin: auto;
+//         display: flex;
+//         flex-direction: row;
+//         justify-content: space-between;
+//         align-items: center;
+//     }
+//     .Logo {
+//         display: inline-block;
+//         margin-right: 1em;
+//         color: white;
+//         h1 {
+//             font-family: 'Tangerine';
+//             font-size: 55px;
+//         }
+//         .Btn-menu {
+//             display: none;
+//         }
+//     }
+//     .Enlaces {
+//         display: inline-block;
+//         text-align: right;
+//         a {
+//             color: white;
+//             margin-right: 5%;
+//             text-decoration: none;
+//         }
+//         a:hover {
+//             background: #f2f2f2;
+//             color: #4357ad;
+//         }
+//     }
+// }
 
-    .PersonalInformationInfoContainer{
-        display: flex;
-        justify-content: left;
-        flex-direction: column;
-        .Title {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 3%;
-            margin-bottom: 3%;
-            .PersonalInformationText {
-                margin-left: 15px;
-                color: #BFBDBD;
-                font-size: 40px;
-            }
-            img {
-                margin-right: 15px;
-                width: 25px;
-                height: 25px;
-                margin-top: 22px;
-            }
-        }
-        .Subtext {
-            margin-left: 15px;
-            font-size: 18px;
-            color: #BFBDBD;
-        }
-        .Form {
-            display: flex;
-            justify-content: left;
-            flex-direction: column;
-            margin-left: 15px;
-            .Form-control {
-                font-family: Roboto;
-                color: #B3B0B0;
-                margin-bottom: 15px;
-                display: flex;
-                flex-direction: column;
-                .UserLabel {
-                    font-family: 'Roboto';
-                    font-weight: 32;
-                    color: #B3B0B0;
-                    font-size: 22px;
-                    margin-right: 15px;
-                    margin-bottom: 5px;
-                }
-                .InputLogin {
-                    border: none;
-                    border-bottom: 1px solid #673AB7;
-                    border-radius: 3px;
-                    width: 80%;
-                    margin-bottom: 2%;
-                }
-            }
-        }
+//     .PersonalInformationInfoContainer{
+//         display: flex;
+//         justify-content: left;
+//         flex-direction: column;
+//         .Title {
+//             display: flex;
+//             justify-content: space-between;
+//             margin-top: 3%;
+//             margin-bottom: 3%;
+//             .PersonalInformationText {
+//                 margin-left: 15px;
+//                 color: #BFBDBD;
+//                 font-size: 40px;
+//             }
+//             img {
+//                 margin-right: 15px;
+//                 width: 25px;
+//                 height: 25px;
+//                 margin-top: 22px;
+//             }
+//         }
+//         .Subtext {
+//             margin-left: 15px;
+//             font-size: 18px;
+//             color: #BFBDBD;
+//         }
+//         .Form {
+//             display: flex;
+//             justify-content: left;
+//             flex-direction: column;
+//             margin-left: 15px;
+//             .Form-control {
+//                 font-family: Roboto;
+//                 color: #B3B0B0;
+//                 margin-bottom: 15px;
+//                 display: flex;
+//                 flex-direction: column;
+//                 .UserLabel {
+//                     font-family: 'Roboto';
+//                     font-weight: 32;
+//                     color: #B3B0B0;
+//                     font-size: 22px;
+//                     margin-right: 15px;
+//                     margin-bottom: 5px;
+//                 }
+//                 .InputLogin {
+//                     border: none;
+//                     border-bottom: 1px solid #673AB7;
+//                     border-radius: 3px;
+//                     width: 80%;
+//                     margin-bottom: 2%;
+//                 }
+//             }
+//         }
         
-        .Agenda {
-            display: flex;
-            justify-content: space-between;
-            h3 {
-                margin-left: 15px;
-                color: #B3B0B0;
-            }
-            img {
-                width: 25px;
-                height: 25px;
-                margin-right: 26px;
-                margin-top: 15px;
-            }
-        }
-        .BtnPersonalInfo {
-            width: 155px;
-            background-color: #FF4081;
-            color: white;
-            font-family: Roboto;
-            font-size: 35px;
-            height: 65px;
-            padding: 2px 15px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 3%;
-            border-radius: 10px;
-        }
-    }
+//         .Agenda {
+//             display: flex;
+//             justify-content: space-between;
+//             h3 {
+//                 margin-left: 15px;
+//                 color: #B3B0B0;
+//             }
+//             img {
+//                 width: 25px;
+//                 height: 25px;
+//                 margin-right: 26px;
+//                 margin-top: 15px;
+//             }
+//         }
+//         .BtnPersonalInfo {
+//             width: 155px;
+//             background-color: #FF4081;
+//             color: white;
+//             font-family: Roboto;
+//             font-size: 35px;
+//             height: 65px;
+//             padding: 2px 15px;
+//             margin-left: auto;
+//             margin-right: auto;
+//             margin-top: 3%;
+//             border-radius: 10px;
+//         }
+//     }
 
-    @media(max-width:576px) {
-        header {
-            .Menu {
-            }
-            .Logo {
-                h1 {
-                    font-size: 30px;
-                }
-                .Btn-menu {
-                }
-            }
-            .Enlaces {
-                a {
-                    font-size: 12px;
-                }
-                a:hover {
-                }
-            }
-        }
+//     @media(max-width:576px) {
+//         header {
+//             .Menu {
+//             }
+//             .Logo {
+//                 h1 {
+//                     font-size: 30px;
+//                 }
+//                 .Btn-menu {
+//                 }
+//             }
+//             .Enlaces {
+//                 a {
+//                     font-size: 12px;
+//                 }
+//                 a:hover {
+//                 }
+//             }
+//         }
         
-            .PersonalInformationInfoContainer{
-                .Title {
-                    .PersonalInformationText {
-                        font-size: 20px;
-                    }
-                    img {
-                    }
-                }
-                .Subtext {
-                }
-                .Form {
-                    .Form-control {
-                        .UserLabel {
-                            font-size: 14px;
-                        }
-                        .InputLogin {
-                            margin-bottom: 0;
-                        }
-                    }
-                }
+//             .PersonalInformationInfoContainer{
+//                 .Title {
+//                     .PersonalInformationText {
+//                         font-size: 20px;
+//                     }
+//                     img {
+//                     }
+//                 }
+//                 .Subtext {
+//                 }
+//                 .Form {
+//                     .Form-control {
+//                         .UserLabel {
+//                             font-size: 14px;
+//                         }
+//                         .InputLogin {
+//                             margin-bottom: 0;
+//                         }
+//                     }
+//                 }
                 
-                .Agenda {
-                    h3 {
-                    }
-                    img {
-                    }
-                }
-                .BtnPersonalInfo {
-                    font-size: 26px;
-                    height: 42px;
-                    width: 140px;
-                    margin-top: 0;
-                }
-            }
-    }
+//                 .Agenda {
+//                     h3 {
+//                     }
+//                     img {
+//                     }
+//                 }
+//                 .BtnPersonalInfo {
+//                     font-size: 26px;
+//                     height: 42px;
+//                     width: 140px;
+//                     margin-top: 0;
+//                 }
+//             }
+//     }
