Modificacion del header responsive

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,113 +1,43 @@
-header {
-    display: flex;
-    background-color: #6A1B9A;
-    width: 100%;
-    top: 0;
-    justify-content: space-evenly;
-    -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    .Menu {
-        width: 90%;
-        max-width: 1000px;
-        margin: auto;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .Logo {
-        display: inline-block;
-        margin-right: 1em;
-        color: white;
-        h1 {
-            font-family: 'Tangerine';
-            font-size: 55px;
-        }
-        .Btn-menu {
-            display: none;
-        }
-    }
-    .Enlaces {
-        display: inline-block;
-        text-align: right;
-        .a {
-            color: white;
-            margin-right: 5%;
-            text-decoration: none;
-        }
-        a:hover {
-            background: #f2f2f2;
-            color: #4357ad;
+.MainContainer{
+    .ContainerHome{
+        width: 100vw;
+        height: 100vh;
+        .HomeInfoContainer{
+            width: 100%;
+            height: 100%;
+            .Home {
+                text-align: center;
+                padding-top: 5%;
+                color: #fff;
+                margin-top: 0;
+            }
+            .AlertButton {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-top: 30px;
+                .Alert {
+                    height: 340px;
+                    width: 340px;
+                    font-size: 36px;
+                    border-radius: 50%;
+                    background-color: #FF4081;
+                    color: white;
+                    font-family: Roboto;
+                    border: none;
+                    -webkit-box-shadow: 5px 5px 19px 2px rgba(156,145,156,1);
+                    -moz-box-shadow: 5px 5px 19px 2px rgba(156,145,156,1);
+                    box-shadow: 5px 5px 19px 2px rgba(156,145,156,1);
+                }
+            }
         }
     }
 }
-    .HomeInfoContainer{
-        width: 100%;
-        height: 80vh;
-        .Home {
-            text-align: center;
-            padding-top: 5%;
-            color: #fff;
-            margin-top: 0;
-        }
-        .AlertButton {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            .Alert {
-                margin-top: 50%;
-                height: 340px;
-                width: 340px;
-                font-size: 36px;
-                border-radius: 50%;
-                background-color: #FF4081;
-                color: white;
-                font-family: Roboto;
-                border: none;
-                -webkit-box-shadow: 5px 5px 19px 2px rgba(156,145,156,1);
-                -moz-box-shadow: 5px 5px 19px 2px rgba(156,145,156,1);
-                box-shadow: 5px 5px 19px 2px rgba(156,145,156,1);
-            }
-        }
-    }
 
     @media(max-width:576px) {
-        header {
-            .Menu {
-                flex-direction: column;
-            }
-            .Logo {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                width: 100%;
-                padding: 1em;
-                h1 {
-                    font-size: 40px;
-                }
-                .Btn-menu {
-                    display: inline-block;
-                    color: white;
-                }
-            }
-            .Enlaces {
-                width: 100%;
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
-                justify-content: space-around;
-                a {
-                    // display: none
-                }
-            }
-        }
             .HomeInfoContainer{
-                .Home {
-                }
                 .AlertButton {
                     .Alert {
-                        margin-top: 63%;
                         height: 110px;
                         width: 110px;
                         font-size: 28px;
@@ -115,35 +45,13 @@ header {
                 }
             }
         }
-    @media(min-width:768px) {
-        header {
-            justify-content: space-around;
-            .ContainerImageAvatar {
-                .AvatarImg {
-                    width: 50px;
-                    height: 50px;
-                }
-            }
-        
-            .HomeTitle {
-                font-size: 45px;
-            }
-        
-            .ContainerImageMenu {
-                .Menu {
-                    width: 60px;
-                    height: 60px;
-                }
-            }
-        }
-        
+    @media(min-width:768px) {        
             .HomeInfoContainer{
                 height: 90vh;
                 .Home {
                 }
                 .AlertButton {
                     .Alert {
-                        margin-top: 61%;
                         height: 260px;
                         width: 260px;
                         font-size: 73px;
@@ -153,42 +61,6 @@ header {
     }
 
     @media(min-width:1200px) {
-        header {
-            justify-content: space-around;
-            .ContainerImageAvatar {
-                .AvatarImg {
-                    width: 80px;
-                    height: 80px;
-                }
-            }
-        
-            .HomeTitle {
-                font-size: 65px;
-            }
-        
-            .ContainerImageMenu {
-                .Menu {
-                    width: 90px;
-                    height: 90px;
-                    h1 {
-                        font-size: 60px;
-                    }
-                    .Btn-menu {
-                        display: none;
-                    }
-                }
-                .Enlaces {
-                    display: inline-block;
-                    text-align: right;
-                    a {
-                        color: white;
-                        margin-right: 5%;
-                        font-size: 20px;
-                        text-decoration: none;
-                    }
-                }
-            }
-        }
             .HomeInfoContainer{
                 height: 100%;
                 background-color: none;
@@ -196,7 +68,6 @@ header {
                 }
                 .AlertButton {
                     .Alert {
-                        margin-top: 30%;
                         height: 300px;
                         width: 300px;
                         font-size: 100px;
