width del 100% del header dth # Por favor ingrese el mensaje del commit para sus cambios. Las líneas que comiencen

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -30,6 +30,7 @@ header {
         .Enlaces {
             display: flex;
             justify-content: space-evenly;
+            width: 100%;
             .a {
                 color: white;
                 text-decoration: none;
