--- a/src/components/EmergencyContacts/EmergencyContacts.scss
+++ b/src/components/EmergencyContacts/EmergencyContacts.scss
@@ -3,197 +3,222 @@
     width: 100vw;
 }
 
-// header {
-//     display: flex;
-//     background-color: #6A1B9A;
-//     width: 100%;
-//     top: 0;
-//     justify-content: space-evenly;
-//     -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-//     -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-//     box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-//     .Menu {
-//         width: 90%;
-//         max-width: 1000px;
-//         margin: auto;
-//         display: flex;
-//         flex-direction: row;
-//         justify-content: space-between;
-//         align-items: center;
-//     }
-//     .Logo {
-//         display: inline-block;
-//         margin-right: 1em;
-//         color: white;
-//         h1 {
-//             font-family: 'Tangerine';
-//             font-size: 55px;
-//         }
-//         .Btn-menu {
-//             display: none;
-//         }
-//     }
-//     .Enlaces {
-//         display: inline-block;
-//         text-align: right;
-//         a {
-//             color: white;
-//             margin-right: 5%;
-//             text-decoration: none;
-//         }
-//         a:hover {
-//             background: #f2f2f2;
-//             color: #4357ad;
-//         }
-//     }
-// }
+/*
+header {
+    display: flex;
+    background-color: #6A1B9A;
+    width: 100%;
+    top: 0;
+    justify-content: space-evenly;
+    -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
+    .Menu {
+        width: 90%;
+        max-width: 1000px;
+        margin: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .Logo {
+        display: inline-block;
+        margin-right: 1em;
+        color: white;
+        h1 {
+            font-family: 'Tangerine';
+            font-size: 55px;
+        }
+        .Btn-menu {
+            display: none;
+        }
+    }
+    .Enlaces {
+        display: inline-block;
+        text-align: right;
+        a {
+            color: white;
+            margin-right: 5%;
+            text-decoration: none;
+        }
+        a:hover {
+            background: #f2f2f2;
+            color: #4357ad;
+        }
+    }
+}
+*/
 
-//     .PersonalInformationInfoContainer{
-//         display: flex;
-//         justify-content: left;
-//         flex-direction: column;
-//         .Title {
-//             display: flex;
-//             justify-content: space-between;
-//             margin-top: 3%;
-//             margin-bottom: 3%;
-//             .PersonalInformationText {
-//                 margin-left: 15px;
-//                 color: #BFBDBD;
-//                 font-size: 40px;
-//             }
-//             img {
-//                 margin-right: 15px;
-//                 width: 25px;
-//                 height: 25px;
-//                 margin-top: 22px;
-//             }
-//         }
-//         .Subtext {
-//             margin-left: 15px;
-//             font-size: 18px;
-//             color: #BFBDBD;
-//         }
-//         .Form {
-//             display: flex;
-//             justify-content: left;
-//             flex-direction: column;
-//             margin-left: 15px;
-//             .Form-control {
-//                 font-family: Roboto;
-//                 color: #B3B0B0;
-//                 margin-bottom: 15px;
-//                 .UserLabel {
-//                     font-family: 'Roboto';
-//                     font-weight: 32;
-//                     color: #B3B0B0;
-//                     font-size: 22px;
-//                     margin-right: 15px;
-//                 }
-//                 .InputLogin {
-//                     border: none;
-//                     border-bottom: 1px solid #673AB7;
-//                     border-radius: 3px;
-//                     width: 30%;
-//                     margin-bottom: 2%;
-//                 }
-//             }
-//             .Form-control-address {
-//                 display: flex;
-//                 flex-direction: column;
-//                 font-family: Roboto;
-//                 color: #B3B0B0;
-//                 .InputAddress {
-//                     border-bottom: 1px solid #673AB7;
-//                     border-radius: 3px;
-//                     width: 90%;
-//                     margin-left: 11px;
-//                     margin-bottom: 2%;
-//                     height: 90px;
-//                 }
-//             }
-//         }
-//         .BtnPersonalInfo {
-//             display: none;
-//             width: 155px;
-//             background-color: #FF4081;
-//             color: white;
-//             font-family: Roboto;
-//             font-size: 35px;
-//             height: 65px;
-//             padding: 2px 15px;
-//             margin-left: auto;
-//             margin-right: auto;
-//             margin-top: 3%;
-//             border-radius: 10px;
-//         }
-//     }
+     .EmergencyContactsInfoContainer{
+         display: flex;
+         justify-content: left;
+         flex-direction: column;
+         //padding-left: 10%;
+         //padding-right: 10%;
+         width: 50%;
+         margin-left: auto;
+         margin-right: auto;
+         margin-top: 30px;
+         box-shadow: 5px 5px 10px #dadada;
+         border: 1px solid #acacac;
+         border-radius: 5px;
+         padding: 30px;
+         .Title {
+             display: flex;
+             justify-content: space-between;
+             margin-top: 2%;
+             margin-bottom: 2%;
+             .PersonalInformationText {
+                 color: #BFBDBD;
+                 font-size: 2rem;
+             }
+             img {
+                 margin-right: 10px;
+                 width: 25px;
+                 height: 25px;
+                 margin-top: 22px;
+             }
+         }
+         .Subtext {
+             margin-left: 15px;
+             font-size: 18px;
+             color: #BFBDBD;
+         }
+         .Form {
+             display: flex;
+             justify-content: left;
+             flex-direction: column;
+             //margin-left: 15px;
+             .Form-control {
+                 font-family: 'Roboto';
+                 color: #B3B0B0;
+                 margin-bottom: 15px;
+                 .UserLabel {
+                     font-family: 'Roboto';
+                     font-weight: 32;
+                     color: #B3B0B0;
+                     font-size: 22px;
+                     margin-right: 15px;
+                     margin-bottom: 5px;
+                 }
+                 .InputLogin {
+                    border: none;
+                     border-bottom: 1px solid #673AB7;
+                     width: 100%;
+                     border-radius: 0;
+                     margin-bottom: 2%;
+                 }
+             }
+             /*.Form-control-address {
+                 display: flex;
+                 flex-direction: column;
+                 font-family: 'Roboto';
+                color: #B3B0B0;
+                .InputAddress {
+                    border-bottom: 1px solid #673AB7;
+                    border-radius: 3px;
+                    width: 40%;
+                    margin-left: 11px;
+                    margin-bottom: 2%;
+                    height: 90px;
+                }
+            }*/
+        }
+        .BtnPersonalInfo {
+            display: none;
+            width: 155px;
+            background-color: #FF4081;
+            color: white;
+            font-family: Roboto;
+            font-size: 35px;
+            height: 65px;
+            padding: 2px 15px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 3%;
+            border-radius: 10px;
+        }
+    }
 
-//     @media(max-width:576px) {
-//         header {
-//             .Menu {
-//             }
-//             .Logo {
-//                 h1 {
-//                     font-size: 30px;
-//                 }
-//                 .Btn-menu {
-//                 }
-//             }
-//             .Enlaces {
-//                 a {
-//                     font-size: 12px;
-//                 }
-//                 a:hover {
-//                 }
-//             }
-//         }
+    @media(max-width:576px) {
+        /*header {
+            .Menu {
+            }
+            .Logo {
+                h1 {
+                    font-size: 30px;
+                }
+                .Btn-menu {
+                }
+            }
+            .Enlaces {
+                a {
+                    font-size: 12px;
+                }
+                a:hover {
+                }
+            }
+        }*/
         
-//             .PersonalInformationInfoContainer{
-//                 .Title {
-//                     .PersonalInformationText {
-//                         font-size: 18px;
-//                     }
-//                     img {
-//                         width: 20px;
-//                         margin-top: 16px;
-//                     }
-//                 }
-//                 .Form {
-//                     .Form-control {
-//                         .UserLabel {
-//                             font-size: 14px;
-//                         }
-//                         .InputLogin {
-//                         }
-//                     }
-//                     .Form-control-address {
-//                         .InputAddress {
-//                             margin-left: 6px;
-//                             height: 60px;
-//                     }
-//                 }
-//             }
-//                 .EmergencyText {
-//                     // font-size: 16px;
-//                 }
-//                 .EmergencySubtext {
-//                     // margin-top: 5px;
-//                     // margin-bottom: 0;
-//                     // font-size: 10px;
-//                 }
-//                 .Addimage {
-//                     width: 15px;
-//                     height: 15px;
-//                 }
-//                 .BtnPersonalInfo {
-//                     width: 100px;
-//                     font-size: 20px;
-//                     height: 35px;
-//                     padding: 1px 10px;
-//                 }
-//             }
-//     }
+            .EmergencyContactsInfoContainer{
+                width: 70%;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 30px;
+                box-shadow: none;
+                border: none;
+                border-radius: none;
+                padding: 0;
+                .Title {
+                    margin-top: 6%;
+                    margin-bottom: 6%;
+                    .PersonalInformationText {
+                        font-size: 1.1rem;
+                    }
+                    img {
+                        width: 20px;
+                        margin-top: 16px;
+                        margin-left: 10px;
+                    }
+                }
+                .Form {
+                    .Form-control {
+                        .UserLabel {
+                            font-size: .9rem;
+                        }
+                        .InputLogin {
+                            margin-bottom: 0;
+                        }
+                    }
+                    /*.Form-control-address {
+                        .InputAddress {
+                            margin-left: 6px;
+                            height: 60px;
+                    }
+                }*/
+            }
+                .EmergencyText {
+                     font-size: 16px;
+                }
+                .EmergencySubtext {
+                     margin-top: 5px;
+                     margin-bottom: 0;
+                     font-size: 10px;
+                }
+                .Addimage {
+                    width: 15px;
+                    height: 15px;
+                }
+                .BtnPersonalInfo {
+                    font-size: 1.4rem;
+                    height: 35px;
+                    width: 100px;
+                    margin-top: 30px;
+                    //padding: 1px 10px;
+                }
+            }
+    }
 
         
     
